# mountain_shooter

./: .gitignore  README.md  main.py  pyproject.toml
core/: background.py  const.py  enemy.py  entity.py  entity_factory.py  game.py  level.py  menu.py  player.py
